crates/shell-parser/tests/snapshots/parser_snapshots__redirections__fd_prefix.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"cmd 2> err.txt\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cmd",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: Some(
                    2,
                ),
                kind: Output,
                target: File(
                    Word {
                        parts: [
                            Literal(
                                "err.txt",
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
