crates/shell-parser/tests/snapshots/parser_snapshots__redirections__fd_redirect.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"cmd 2>&1\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cmd",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: Some(
                    2,
                ),
                kind: DupOutput,
                target: Fd(
                    1,
                ),
            },
        ],
    },
)
