crates/shell-parser/tests/snapshots/parser_snapshots__redirections__heredoc_backslash_delimiter.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
assertion_line: 255
expression: "parse(\"cat <<\\\\EOF\\nhello\\nEOF\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Heredoc,
                target: Heredoc {
                    body: "hello\n",
                    quoted: true,
                    substitutions: [],
                },
            },
        ],
    },
)
