crates/shell-parser/tests/snapshots/parser_snapshots__redirections__heredoc_basic.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
assertion_line: 235
expression: "parse(\"cat <<EOF\\nhello world\\nline two\\nEOF\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Heredoc,
                target: Heredoc {
                    body: "hello world\nline two\n",
                    quoted: false,
                    substitutions: [],
                },
            },
        ],
    },
)
