crates/shell-parser/tests/snapshots/parser_snapshots__redirections__heredoc_empty_body.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
assertion_line: 260
expression: "parse(\"cat <<EOF\\nEOF\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Heredoc,
                target: Heredoc {
                    body: "",
                    quoted: false,
                    substitutions: [],
                },
            },
        ],
    },
)
