crates/shell-parser/tests/snapshots/parser_snapshots__redirections__heredoc_single_quoted_delimiter.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
assertion_line: 245
expression: "parse(\"cat <<'EOF'\\nhello $var\\nEOF\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Heredoc,
                target: Heredoc {
                    body: "hello $var\n",
                    quoted: true,
                    substitutions: [],
                },
            },
        ],
    },
)
