crates/shell-parser/tests/snapshots/parser_snapshots__redirections__heredoc_strip_tabs.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
assertion_line: 240
expression: "parse(\"cat <<-EOF\\n\\thello\\n\\tworld\\n\\tEOF\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: HeredocStrip,
                target: Heredoc {
                    body: "hello\nworld\n",
                    quoted: false,
                    substitutions: [],
                },
            },
        ],
    },
)
