crates/shell-parser/tests/snapshots/parser_snapshots__redirections__heredoc_unterminated.snap
---
source: tests/parser_snapshots.rs
assertion_line: 265
expression: "parse(\"cat <<EOF\\nhello\\nworld\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Heredoc,
                target: Heredoc {
                    body: "hello\nworld\n",
                    quoted: false,
                    substitutions: [],
                },
            },
        ],
    },
)
