crates/shell-parser/tests/snapshots/parser_snapshots__redirections__herestring.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"cat <<< 'hello'\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "cat",
                    ),
                ],
            },
        ],
        redirections: [
            Redirection {
                fd: None,
                kind: Herestring,
                target: File(
                    Word {
                        parts: [
                            SingleQuoted(
                                "hello",
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
